--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ header{
 #text-div .text ul li{
     color: white;
     margin:19px 0px;
+    list-style-position: inside;
 }
 #text-div .pren{
     width:200%;
@@ -374,6 +375,98 @@ form .submit-btn:hover{
     padding: 0px 10px 0px 10px;
 }
 
+/* 7rd section code suru  */
+#text-img{
+    display:flex;
+    padding:70px 0px;
+    margin-left:250px;
+    margin-right:250px;
+    gap:50px;
+    align-items: center;
+    justify-content: space-between;
+
+}
+#text-img .photo-compure p{
+    padding:15px 0px;
+    font-size:18px;
+    line-height:1em;
+}
+#text-img .photo-compure ul li{
+    list-style-position: inside;
+}
+#text-img .photo-compure ul li a{
+    text-decoration: none;
+    display:inline-block;
+    margin-top:3px;
+    font-size: 20px;
+    transition: 0.5s;
+    padding: 3px 0px;
+}
+#text-img .photo-compure ul li a:hover{
+    color: black;
+    padding-left: 30px;
+    text-decoration: underline;
+}
+#text-img .photo-compure-img{
+    width: 100%;
+}
+#text-img .photo-compure-img img{
+    width: 100%;
+}
+
+
+/* footer section code suru ekhn tkheke */
+footer{
+    background-color: rgba(218, 210, 102, 0.295);
+    padding:50px 0px 100px 0px;
+}
+footer hr{
+    margin-top:30px;
+    height:5px;
+    background-color: rgba(137, 43, 226, 0.712);
+}
+footer .text-icon p {
+    text-align: center;
+    margin-top: 20px;
+}
+#footer-prent{
+    display:flex;
+    justify-content: space-between;
+    margin-left: 200px;
+    margin-right: 200px;
+    gap:80px;
+    text-align: justify;
+}
+#footer-prent .footer-div{
+    width: 100%;
+}
+#footer-prent .footer-div h3{
+    margin-bottom: 20px;
+    font: bold;
+    font-size: 20px;
+    letter-spacing:2px;
+}
+#footer-prent .footer-div p{
+    line-height: 23px;
+    color: rgba(0, 0, 0, 0.801);
+}
+#footer-prent .footer-div p a{
+    display:inline-block;
+    text-decoration:none;
+    padding:5px;
+    transition: 0.5s;
+}
+#footer-prent .footer-div p a:hover{
+    padding-left:30px;
+    text-decoration: underline;
+    color: rgb(24, 218, 192);
+
+}
+#footer-prent .footer-div a i{
+    font-size: 30px;
+    margin: 0px 5px;
+}
+
 /* media Responsive code suru ekhn tkheke section one code */
 @media only screen and (max-width:688px){
     #fast-section .mul-div{
@@ -460,6 +553,30 @@ form .submit-btn:hover{
         text-align: center;
     }
 
+    /* 7rd section code suru */
+    #text-img{
+        display:block;
+        padding:60px 0px;
+        margin-left:30px;
+        margin-right:30px;
+    
+    }
+    
+    /* 8rd section code suru */
+    #footer-prent{
+        display:block;
+        margin-left:20px;
+        margin-right:20px;
+    }
+    #footer-prent .footer-div h3{
+        margin: 30px 0px;
+        text-align: center;
+    }
+    #footer-prent .footer-div a i{
+        font-size: 30px;
+        margin-left:20px;
+    }
+
 
 }
 @media only screen and (min-width:689px) and (max-width:1099px){
@@ -528,6 +645,27 @@ form .submit-btn:hover{
         margin-left:100px;
         margin-right:100px;
         /* padding: 50px 0px; */
+    }
+
+    /* 7rd section code suru */
+    #text-img{
+        display:block;
+        padding:50px 0px;
+        margin-left:100px;
+        margin-right:100px;
+    
+    
+    }
+
+    /* 8rd section cede surr ekhn tkeke */
+    #footer-prent{
+        display:flex;
+        margin-left:90px;
+        margin-right:90px;
+    }
+    #footer-prent .footer-div h3{
+        margin: 30px 0px;
+        text-align: center;
     }
 
 }
